[package]
name = "frame-picker"
version = "0.1.0"
authors = ["Hugo <cumt_zhangyong@163.com>"]
edition = "2021"
description = "FramePicker is a Rust library for handling network frame data, designed to solve problems similar to TCP/UART packet sticking."
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/cumthugo/frame-picker.git"

[dependencies]
